# synapse-core

./: Cargo.toml
.github/: dependabot.yml
docs/: cache-input-validation.md  dependency-updates.md  graphql-data-export.md  graphql-idempotency.md  query-cache.md  websocket-graceful-shutdown.md  websocket-pagination.md
migrations/: 20260526000000_add_trace_id.down.sql  20260526000000_add_trace_id.sql
src/: lib.rs  main.rs  telemetry.rs
src/auth/: input_validation.rs  metrics.rs  mod.rs
src/cache/: mod.rs  rate_limiting.rs  validation.rs
src/db/: mod.rs  models.rs  partition.rs  queries.rs
src/graphql/: mod.rs  pagination.rs
src/graphql/pagination/: cursor.rs  offset.rs
src/graphql/resolvers/: transaction.rs
src/handlers/: export.rs  webhook.rs
src/middleware/: idempotency.rs
src/services/: mod.rs  processor.rs  query_cache.rs  resource_limits.rs  webhook_dispatcher.rs
src/telemetry/: input_validation.rs  mod.rs  reconnection.rs
src/ws/: connection_pool.rs  health.rs  mod.rs
