[workspace]
resolver = "2"

[package]
name = "synapse-core"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "warn"

[lints.clippy]
too_many_arguments = "warn"

[lib]
name = "synapse_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
vaultrs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "bigdecimal",
    "json",
] }
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
home = "=0.5.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1"
failsafe = "1"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["cors", "limit"] }
hyper = "0.14"
arc-swap = "1"
csv = "1"
cron = "0.12"
async-graphql = { version = "6", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-axum = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
governor = "0.6"
regex = "1"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
jsonschema = "0.17"
once_cell = "1.19"
ipnet = "2.9"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
url = "2.5"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
flate2 = "1.0"
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"
prometheus = "0.13"
lru = "0.12"

[dev-dependencies]
mockito = "1"
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
assert_cmd = "2"

[[bench]]
name = "critical_paths"
harness = false
